databasecheck before new entry

--- a/flaskinventory/templates/home.html
+++ b/flaskinventory/templates/home.html
@@ -43,7 +43,7 @@
                 <li>Make <strong>your</strong> research paper more visible by adding it to the inventory and linking it to journalistic sources.</li>
                 <li>You know a data base or corpus that contains full-text data? Share it with the community by adding it here!</li>
             </ul>
-            <a href="{{ url_for('inventory.new_entry') }}" class="btn btn-primary px-4">Add entry</a>
+            <a href="{{ url_for('records.new_entry') }}" class="btn btn-primary px-4">Add entry</a>
         </div>
 
         <div class="col-md-6">
