--- a/flaskinventory/static/main.css
+++ b/flaskinventory/static/main.css
@@ -65,3 +65,23 @@
 .color-github {
     color: black;
 }
+
+/* Animations / Transitions */
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+fieldset[hidden] {
+    opacity: 0;
+}
+fieldset {
+    opacity: 1;
+    -webkit-animation: fadein 200ms; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 200ms; /* Firefox < 16 */
+    -ms-animation: fadein 200ms; /* Internet Explorer */
+    -o-animation: fadein 200ms; /* Opera < 12.1 */
+    animation: fadein 200ms;
+    
+}
