--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -18,6 +18,12 @@
     <!-- <script src="{{ url_for('static',  filename='/js/typeahead.bundle.min.js') }}"></script> -->
     <script src="{{ url_for('static',  filename='js/jquery.typeahead.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}"> 
+
+    <!-- Tom Select -->
+    <link href="https://cdn.jsdelivr.net/npm/tom-select@1.7.6/dist/css/tom-select.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@1.7.6/dist/js/tom-select.complete.min.js"></script>
+    <link href="{{ url_for('static',  filename='js/tom-select.bootstrap5.css') }}" rel="stylesheet">
+
     <script type=text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     </script>
