--- a/flaskinventory/templates/records/newsource.html
+++ b/flaskinventory/templates/records/newsource.html
@@ -72,7 +72,9 @@
 
             <div id="group-epaper" class="mb-3 form-group" hidden>
                 <label for="channel-epaper" class="form-label">Does the print news source have an e-paper version? Please insert the url here:</label>
-                <input name="channel_epaper" type="text" class="form-control" id="channel-epaper" placeholder="Please specify (e.g., https://swmh-epaper.s4p-iapps.com/)">
+                <input name="channel_epaper" type="text" class="form-control" id="channel-epaper" placeholder="Please specify (e.g., https://swmh-epaper.s4p-iapps.com/)" aria-describedby="channel-epaper-feedback">
+                <div id="channel-epaper-feedback"></div>
+
             </div>
 
             <div id="group-channel-comments" class="mb-3 form-group" hidden>
@@ -107,7 +109,7 @@
             
             <div id="group-source-founded" class="mb-3 form-group">
                 <label for="source-founded" class="form-label">What year was the news source founded?</label>
-                <input name="founded" type="number" step="1" min="1900" max="2100" class="form-control" id="source-founded" placeholder="Format: YYYY" aria-describedby="founded-feedback">
+                <input name="founded" type="number" step="1" min="1700" max="2100" class="form-control" id="source-founded" placeholder="Format: YYYY" aria-describedby="founded-feedback">
                 <div id="founded-feedback"></div>
             </div>
 
@@ -361,7 +363,7 @@
                         <small id="geographic-scope-helptext">This information can be inferred from the content (e.g., actors, topics, events).</small>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" aria-describedby="geographic-scope-feedback" type="radio" name="geographic_scope" id="geographic_scope1" value="multinational" checked>
+                        <input class="form-check-input" aria-describedby="geographic-scope-feedback" type="radio" name="geographic_scope" id="geographic_scope1" value="multinational">
                         <label class="form-check-label" for="geographic_scope1">
                             Multinational (e.g., EU in general, German-speaking countries)
                         </label>
@@ -1048,17 +1050,22 @@
 
     function serializeForm(f) {
         var obj = {};
-            var formData = new FormData(f);
-            
-            var obj = Object.fromEntries(
-                Array.from(formData.keys()).map(key => [
-                    key, formData.getAll(key).length > 1 ? 
-                    formData.getAll(key) : formData.get(key)
-                ])
-                )
+        var formData = new FormData(f);
+        
+        var obj = Object.fromEntries(
+            Array.from(formData.keys()).map(key => [
+                key, formData.getAll(key).length > 1 ? 
+                formData.getAll(key) : formData.get(key)
+            ])
+            )
+        
+        // remove empty strings
+        var obj = Object.fromEntries(Object.entries(obj).filter(([_, v]) => v != ""));
 
-            return obj;
+        return obj;
         };
+
+    
 
 
     function submitForm(endpoint, form) {
